force-app/main/default/objects/Department__c/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOD</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>HOD</relationshipLabel>
    <relationshipName>HOD</relationshipName>
    <type>Lookup</type>
</CustomField>