force-app/main/default/objects/Department__c/fields/Internal_Library__c.field-meta.xml
<CustomField>
    <fullName>Internal_Library__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Library</label>
    <type>Checkbox</type>
</CustomField>