force-app/main/default/objects/Department__c/fields/No_Of_Classroom__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Classroom__c</fullName>
    <label>No Of Classroom</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>